--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_state_notifier: ^0.7.1
   sqflite: ^2.2.4+1
   http: ^0.13.5
+  path: ^1.8.2
 
 dev_dependencies:
   flutter_test:
