--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   http: ^0.13.5
   path: ^1.8.2
   flutter_svg: ^1.1.6
+  camera: ^0.10.3
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
