--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
   provider: ^6.0.5
-  cached_network_image: ^3.2.3
   flutter_state_notifier: ^0.7.1
   sqflite: ^2.2.4+1
   http: ^0.13.5
@@ -48,6 +47,7 @@ dependencies:
   camera: ^0.10.3
   path_provider: ^2.0.12
   lottie: ^2.2.0
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
