:lipstick: feat : 문제 스킵 알림 추가 및 알림 디자인 변경

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   path_provider: ^2.0.12
   lottie: ^2.2.0
   permission_handler: ^10.2.0
+  another_flushbar: ^1.12.29
 
 dev_dependencies:
   flutter_test:
