--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   lottie: ^2.2.0
   permission_handler: ^10.2.0
   another_flushbar: ^1.12.29
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
