--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   permission_handler: ^10.2.0
   another_flushbar: ^1.12.29
   connectivity: ^3.0.6
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
