--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dev_dependencies:
   json_serializable: ^6.6.1
   mockito: ^5.3.2
   test: ^1.21.6
+  flutter_launcher_icons: ^0.12.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -129,3 +130,11 @@ flutter:
           weight: 300
         - asset: asset/font/Pretendard-Thin.otf
           weight: 100
+
+# Flutter Icon
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "asset/logo/logo.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "asset/logo/logo_foreground.png"
