--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,7 +73,7 @@ android {
             signingConfig signingConfigs.release
 
             minifyEnabled true
-            useProguard true
+            shrinkResources true
 
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
